--- a/client/src/login/login.css
+++ b/client/src/login/login.css
@@ -13,7 +13,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 550px;
+  width: 560px;
   height: auto;
   padding: 40px;
   transform: translate(-50%, -50%);
@@ -33,7 +33,19 @@ body {
 .login-box .user-box {
   position: relative;
 }
-
+.btn {
+  padding: auto;
+  background-color: #027581;
+  border: #19bcfc;
+  background: none;
+  color: #fff;
+  
+ 
+}
+.checkbox label,
+.checkbox a {
+  color: #fff;
+}
 .login-box .user-box input {
   width: 100%;
   padding: 10px 0;
@@ -73,6 +85,7 @@ body {
   font-size: 16px;
   text-decoration: none;
   text-transform: uppercase;
+  width: 4cm;
   overflow: hidden;
   transition: .5s;
   margin-top: 40px;
