--- a/client/src/GroupChat/Chat.css
+++ b/client/src/GroupChat/Chat.css
@@ -1,62 +1,129 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
-/* Nút Để Mở Chatbox */
- .nut-mo-chatbox {
-   background-color: #555;
-   color: white;
-   padding: 16px 20px;
-   border: none;
-   cursor: pointer;
-   opacity: 0.8;
-   position: fixed;
-   bottom: 23px;
-   right: 28px;
-   width: 280px;
- }
-/* Ẩn chatbox mặc định */
- .Chatbox {
-   display: none;
-   position: fixed;
-   bottom: 0;
-   right: 15px;
-   border: 3px solid #f1f1f1;
-   z-index: 9;
- }
-/* Thêm style cho form */
- .form-container {
-   max-width: 300px;
-   padding: 10px;
-   background-color: white;
- }
-/* thiết lập style textarea */
- .form-container textarea {
-   width: 100%;
-   padding: 15px;
-   margin: 5px 0 22px 0;
-   border: none;
-   background: #f1f1f1;
-   resize: none;
-   min-height: 200px;
- }
-/*thiết lập style cho textarea khi được focus */
- .form-container textarea:focus {
-   background-color: #ddd;
-   outline: none;
- }
-/* Thiết lập style cho nút trong form*/
- .form-container .btn {
-   background-color: #4CAF50;
-   color: white;
-   padding: 16px 20px;
-   border: none;
-   cursor: pointer;
-   width: 100%;
-   margin-bottom:10px;
-   opacity: 0.8;
- }/* Thiết lập màu nền cho nút đóng chatbox */
- .form-container .nut-dong-chatbox {
-   background-color: red;
- }
-/* Thêm hiệu ứng hover cho nút*/
- .form-container .btn:hover, .nut-mo-chatbox:hover {
-   opacity: 1;
- }
+*, html {
+    --primaryGradient: linear-gradient(93.12deg, #581B98 0.52%, #9C1DE7 100%);
+    --secondaryGradient: linear-gradient(268.91deg, #581B98 -2.14%, #9C1DE7 99.69%);
+    --primaryBoxShadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    --secondaryBoxShadow: 0px -10px 15px rgba(0, 0, 0, 0.1);
+    --light: 300;
+    --regular: 400;
+    --semiBold: 600;
+    --extraLight: 300;
+    --italic: 300;
+    --primary: #581B98;
+}
+
+/* 300;0,400;0,600;1,300 */
+
+body {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
+    font-size: 100%;
+    background: #F1F1F1;
+}
+
+.chatbox__support {
+    background: #f9f9f9;
+    height: 450px;
+    width: 350px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+/* HEADER */
+.chatbox__header {
+    background: var(--primaryGradient);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    box-shadow: var(--primaryBoxShadow);
+}
+
+.chatbox__image--header {
+    margin-right: 10px;
+}
+
+.chatbox__heading--header {
+    font-size: 1.2rem;
+    color: white;
+}
+
+.chatbox__description--header {
+    font-size: .9rem;
+    color: white;
+}
+
+/* Messages */
+.chatbox__messages {
+    padding: 0 20px;
+}
+
+.messages__item {
+    margin-top: 10px;
+    background: #E0E0E0; 
+    padding: 8px 12px;
+    max-width: 70%;
+}
+
+.messages__item--visitor,
+.messages__item--typing {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.messages__item--operator {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background: var(--primary);
+    color: white;
+}
+
+/* FOOTER */
+.chatbox__footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 20px;
+    background: var(--secondaryGradient);
+    box-shadow: var(--secondaryBoxShadow);
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    margin-top: 20px;
+}
+
+.chatbox__footer input {
+    border: none;
+    padding: 10px 10px;
+    border-radius: 30px;
+    text-align: center;
+}
+
+.chatbox__send--footer {
+    color: white;
+}
+
+.chatbox__button button,
+.chatbox__button button:focus,
+.chatbox__button button:visited {
+    padding: 10px;
+    background: white;
+    border: none;
+    outline: none;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
