--- a/client/src/GroupChat/Chat.css
+++ b/client/src/GroupChat/Chat.css
@@ -1,129 +1,91 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+#chatCon {
+  width: 20%;
+  position: absolute;
+  bottom: 3%;
+  right: 3%;
 }
 
-*, html {
-    --primaryGradient: linear-gradient(93.12deg, #581B98 0.52%, #9C1DE7 100%);
-    --secondaryGradient: linear-gradient(268.91deg, #581B98 -2.14%, #9C1DE7 99.69%);
-    --primaryBoxShadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
-    --secondaryBoxShadow: 0px -10px 15px rgba(0, 0, 0, 0.1);
-    --light: 300;
-    --regular: 400;
-    --semiBold: 600;
-    --extraLight: 300;
-    --italic: 300;
-    --primary: #581B98;
+#chatCon .chat-box {
+  /* display: none; */
+  width: 100%;
+  height: 500px;
+  border-radius: 25px;
+  background-color: #eee;
 }
 
-/* 300;0,400;0,600;1,300 */
-
-body {
-    font-family: 'Nunito', sans-serif;
-    font-weight: 400;
-    font-size: 100%;
-    background: #F1F1F1;
+#chatCon .chat-box .header {
+  background-color: #19bcfc;
+  padding: 15px;
+  border-radius: 20px 20px 0 0;
+  color: #fff;
+  font-size: 20px;
 }
 
-.chatbox__support {
-    background: #f9f9f9;
-    height: 450px;
-    width: 350px;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+#chatCon .chat-box .msg-area {
+  overflow: hidden;
+  height: 370px;
+  padding: 15px;
 }
 
-/* HEADER */
-.chatbox__header {
-    background: var(--primaryGradient);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 15px 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    box-shadow: var(--primaryBoxShadow);
+#chatCon .chat-box .msg-area .left span {
+  display: inline-block;
+  font-size: 17.5px;
+  border-radius: 15px;
+  padding: 15px;
+  background-color: #ddd;
 }
 
-.chatbox__image--header {
-    margin-right: 10px;
+#chatCon .chat-box .msg-area .right {
+  text-align: right;
 }
 
-.chatbox__heading--header {
-    font-size: 1.2rem;
-    color: white;
+#chatCon .chat-box .msg-area .right span {
+  display: inline-block;
+  font-size: 17.5px;
+  border-radius: 15px;
+  padding: 15px;
+  background-color: #ddd;
 }
 
-.chatbox__description--header {
-    font-size: .9rem;
-    color: white;
+#chatCon .chat-box .footer {
+  padding: 0 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-/* Messages */
-.chatbox__messages {
-    padding: 0 20px;
+#chatCon .chat-box .footer input {
+  border: 1px solid #fff;
+  padding: 10px;
+  width: 80%;
+  border-radius: 15px;
 }
 
-.messages__item {
-    margin-top: 10px;
-    background: #E0E0E0; 
-    padding: 8px 12px;
-    max-width: 70%;
+#chatCon .chat-box .footer input:foucs {
+  outline: none;
 }
 
-.messages__item--visitor,
-.messages__item--typing {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+#chatCon .chat-box .footer button {
+  border: none;
+  font-size: 22.5px;
+  color: #19bcfc;
+  cursor: pointer;
 }
 
-.messages__item--operator {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    background: var(--primary);
-    color: white;
+#chatCon .pop {
+  width: 100%;
+  height: 25%;
+  cursor: pointer;
 }
 
-/* FOOTER */
-.chatbox__footer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 20px;
-    background: var(--secondaryGradient);
-    box-shadow: var(--secondaryBoxShadow);
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    margin-top: 20px;
+#chatCon .pop p {
+  text-align: right;
 }
 
-.chatbox__footer input {
-    border: none;
-    padding: 10px 10px;
-    border-radius: 30px;
-    text-align: center;
-}
-
-.chatbox__send--footer {
-    color: white;
-}
-
-.chatbox__button button,
-.chatbox__button button:focus,
-.chatbox__button button:visited {
-    padding: 10px;
-    background: white;
-    border: none;
-    outline: none;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
-    border-bottom-left-radius: 50px;
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
+#chatCon .pop img {
+  border-radius: 50%;
+  width: 25%;
 }
