--- a/client/src/GroupChat/Chat.css
+++ b/client/src/GroupChat/Chat.css
@@ -16,10 +16,10 @@ body {
   height: 700px;;
   width: 70px;
   background: #4768b5;
-  background: -webkit-linear-gradient(#4768b5, #35488e);
-  background: -o-linear-gradient(#4768b5, #35488e);
-  background: -moz-linear-gradient(#4768b5, #35488e);
-  background: linear-gradient(#4768b5, #35488e);
+  background: -webkit-linear-gradient(#19bcfc, #19bcfc);
+  background: -o-linear-gradient(#19bcfc, #19bcfc);
+  background: -moz-linear-gradient(#19bcfc, #19bcfc);
+  background: linear-gradient(#19bcfc, #19bcfc);
   box-shadow: 0 10px 20px rgba(0,0,0,0.19);
 }
 
@@ -31,22 +31,22 @@ body {
 
 .menu .items .item {
   height: 70px;
-  border-bottom: 1px solid #6780cc;
+  border-bottom: 1px solid #19bcfc;
   display:flex;
   justify-content: center;
   align-items: center;
-  color: #9fb5ef;
+  color: #19bcfc;
   font-size: 17pt;
 }
 
 .menu .items .item-active {
-  background-color:#5172c3;
+  background-color:#19bcfc;
   color: #FFF;
 }
 
 .menu .items .item:hover {
   cursor: pointer;
-  background-color: #4f6ebd;
+  background-color: #19bcfc;
   color: #cfe5ff;
 }
 
@@ -57,7 +57,7 @@ body {
   height: 700px;
   box-shadow: 0px 8px 10px rgba(0,0,0,0.20);
   overflow: hidden;
-  background-color: #87a3ec;
+  background-color: #19bcfc;
   display: inline-block;
 }
 
@@ -281,7 +281,7 @@ body {
 
 .chat .footer-chat .send {
   color:#fff;
-  background-color: #4f6ebd;
+  background-color: #19bcfc;
   position: absolute;
   right: 50px;
   padding: 12px 12px 12px 12px;
@@ -330,4 +330,28 @@ body {
 
 .clickable {
   cursor: pointer;
+}
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input::before {
+  content: 'Select some files';
+  display: inline-block;
+  background: linear-gradient(top, #f9f9f9, #e3e3e3);
+  border: 1px solid #999;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  font-size: 10pt;
+}
+.custom-file-input:hover::before {
+  border-color: black;
+}
+.custom-file-input:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
