--- a/client/src/GroupChat/Chat.css
+++ b/client/src/GroupChat/Chat.css
@@ -8,13 +8,15 @@ body {
   background-color: #FFF; 
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   height: 700px;
+  width: 5000px;
+  margin-right: 1px;
 }
 
 /* ===== MENU ===== */
 .menu {
   float: left;
   height: 700px;;
-  width: 70px;
+  width: 1000px;
   background: #4768b5;
   background: -webkit-linear-gradient(#19bcfc, #19bcfc);
   background: -o-linear-gradient(#19bcfc, #19bcfc);
@@ -191,6 +193,7 @@ body {
   margin-left: 30px;
   color:#515151;
   font-size: 14pt;
+  margin-right: 0px;
 }
 
 .chat .header-chat .name {
@@ -203,7 +206,7 @@ body {
 
 .chat .header-chat .right {
   position: absolute;
-  right: 40px;
+  right: 20px;
 }
 
 .chat .messages-chat {
@@ -262,15 +265,15 @@ body {
 }
 
 .footer-chat {
-  width: calc(65% - 66px);
-  height: 80px;
+  width: 800px;
+  height: 85px;
   display:flex;
   align-items: center;
   position:absolute;
-  bottom: 0;
-  background-color: transparent;
-  border-top: 2px solid #EEE;
-  
+  bottom: 157px;
+  background-color: #fff ;
+  border-top: 1px solid #EEE;
+
 }
 
 .chat .footer-chat .icon {
@@ -309,6 +312,7 @@ body {
   margin-left: 20px;
   padding: 10px;
 }
+
 
 .footer-chat *::-webkit-input-placeholder {
   color: #C0C0C0;
