--- a/client/src/GroupChat/Chat.css
+++ b/client/src/GroupChat/Chat.css
@@ -8,15 +8,15 @@ body {
   background-color: #FFF; 
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   height: 700px;
-  width: 5000px;
+  width: 8000px;
   margin-right: 1px;
 }
 
 /* ===== MENU ===== */
 .menu {
   float: left;
-  height: 700px;;
-  width: 1000px;
+  height: 1000px;;
+  width: 10px;
   background: #4768b5;
   background: -webkit-linear-gradient(#19bcfc, #19bcfc);
   background: -o-linear-gradient(#19bcfc, #19bcfc);
@@ -358,4 +358,15 @@ body {
 }
 .custom-file-input:active::before {
   background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
+.btn :hover{
+  color: #fff;
+}
+.btn{
+  width: 100px;
+  color: #515151;
+  text-align: center;
+  background-color: #19bcfc;
+  margin-left:50px;
+  
 }
